--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "laravel/framework": "^6.0",
         "laravel/passport": "v8.4.0",
         "laravel/tinker": "^1.0",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "lcobucci/jwt": "3.3.3"
+        "lcobucci/jwt": "3.3.3",
+        "league/flysystem-aws-s3-v3": "~1",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
